Fix overflow on desktop

--- a/projects/shyraq/css/media.css
+++ b/projects/shyraq/css/media.css
@@ -236,6 +236,9 @@
 }
 
 @media (max-width: 600px) {
+    body {
+        overflow: visible;
+    }
     .page {
         height: auto;
     }
