--- a/projects/shyraq/css/style.css
+++ b/projects/shyraq/css/style.css
@@ -27,7 +27,7 @@ body {
 	font-size: 16px;
 	position: relative;
 	line-height: 1.6;
-	overflow-x: hidden;
+	overflow: hidden;
 	max-width: 1920px;
 	margin: 0 auto;
 	height: 100vh;
